# GameCraft-AI-From-Idea-to-Gameplay

Game_Design/my_game/: README.md  pyproject.toml
Game_Design/my_game/output/: Game.py  Game_design.md  app.py  test_Game.py
Game_Design/my_game/src/my_game/: crew.py  main.py
Game_Design/my_game/src/my_game/config/: agents.yaml  tasks.yaml
